# cloudbuild

./: Dockerfile  Makefile  README.md  cloudbuild.yaml  config.yaml  index.html  main.py  pyproject.toml
.secret/: openai_api_key.txt.enc
service/: get_api_key.py
